--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save the Hedgehogs</title>
-    <link rel="icon" href="./img/png-clipart-cute-hedgehog-cute-hedgehog-hedgehog.png" type="image/icon type">
+    <link rel="icon" href="./img/png-clipart-cute-hedgehog-cute-hedgehog-hedgehog.ico">
     <style>
         body {
             font-family: Arial, sans-serif;
